--- a/app/views/ruby_lessons/lessons/lesson_13.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_13.html.erb
@@ -68,6 +68,24 @@
 </p>
 
 
+<h3>Deploying to Heroku</h3>
+
+<p>
+  Let's deploy all of the new changes that we have made to Heroku!
+</p>
+
+<pre><code class="bash">
+git push heroku master
+</code></pre>
+
+<p>
+  Every time we push to Heroku, we should restart the server:
+</p>
+
+<pre><code class="bash">
+heroku restart
+</code></pre>
+
 
 
 
