--- a/app/views/rspec_blog_lessons/lessons/lesson_22.html.erb
+++ b/app/views/rspec_blog_lessons/lessons/lesson_22.html.erb
@@ -97,7 +97,7 @@ describe "DELETE #destroy" do
 end
 </code></pre>
 
-<p>
+<!-- <p>
   Notice how we repeat <code>post  = FactoryGirl.create(:post)</code>. In the last lesson, we introduced <code>let</code>. Unfortunately, using <code>let</code> in this case won't work.
 </p>
 
@@ -191,7 +191,7 @@ describe "DELETE #destroy" do
     expect(response).to redirect_to root_path
   end
 end
-</code></pre>
+</code></pre> -->
 
 <p>
   Let's now run our tests:
