--- a/app/views/ideator_lessons/lessons/lesson_10.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_10.html.erb
@@ -205,7 +205,7 @@ end
   </p>  
 
   <p> 
-    <strong>First</strong>, when we visit the our webpage, it makes a request to the server. 
+    <strong>First</strong>, when we visit our webpage, it makes a request to the server. 
   </p>
 
   <p>
