--- a/app/views/ideator_lessons/lessons/lesson_13.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_13.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
- 	We can use bootstrap's <code>modal.js</code> which can be found <a href="http://getbootstrap.com/javascript/#modals" target="_blank">here</a>. Go here and and let's look at some examples.
+ 	We can use bootstrap's <code>modal.js</code> which can be found <a href="http://getbootstrap.com/javascript/#modals" target="_blank">here</a>. Go here and let's look at some examples.
 </p>
 
 <p>
