--- a/app/views/ideator_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_2.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <p>
-	First we have to set up our SSH keys. Follow <a href = "https://help.github.com/articles/generating-ssh-keys/" target = "_blank">this guide</a> to do so. <strong>Follow each step in the guide from "Checking for existing SSH keys" to "Testing your SSH connection".</strong>
+	First, we have to set up our SSH keys. Follow <a href = "https://help.github.com/articles/generating-ssh-keys/" target = "_blank">this guide</a> to do so. <strong>Follow each step in the guide from "Checking for existing SSH keys" to "Testing your SSH connection".</strong>
 </p>
 
 <p>After you've completed everything in that link, <strong>open up a second terminal window</strong>. You should now have 2 terminal windows open. One terminal window should be running the rails server.</p>
@@ -23,7 +23,7 @@
   <%= image_tag 'ideator/new_terminal_window.png', class: 'img-responsive screenshot' %>
 
   <p>
-    One terminal will look like this, where you can type in commmands:
+    One terminal will look like this, where you can type in commands:
   </p>
 
   <%= image_tag 'ideator/terminal_window.png', class: 'img-responsive screenshot' %>
@@ -35,7 +35,7 @@
   <%= image_tag 'ideator/server_window.png', class: 'img-responsive screenshot' %>
 
   <p>
-    You'll notice that the terminal window that is running the server will not respond to anything that you type in. <strong>You can only execute commands in terminal windows that doesn't have a server running on it (the terminal window in the first screenshot).</strong>
+    You'll notice that the terminal window that is running the server will not respond to anything that you type in. <strong>You can only execute commands in terminal windows that don't have a server running on it (the terminal window in the first screenshot).</strong>
   </p>
 </div>
 
@@ -68,7 +68,7 @@ git commit -am “Initial commit”
 </code></pre>
 
 <p>
-	Now let’s go into GitHub’s front page and create a new repository. On the left hand side, you should see a <strong>green button called “+ New repository”</strong>. Click on that button and just fill in the box that says <strong>“Repository name”</strong>.
+	Now let’s go into GitHub’s front page and create a new repository. On the left-hand side, you should see a <strong>green button called “+ New repository”</strong>. Click on that button and just fill in the box that says <strong>“Repository name”</strong>.
 </p>
 
 <p class="alert alert-warning">
@@ -104,7 +104,7 @@ git push -u origin master
 </p>
 
 <p>
-  Once you are done with this process, let's make sure that everything is set up correctly. In your terminal, run the following command:
+  Once you are done with this process, let's make sure that everything is setup correctly. In your terminal, run the following command:
 </p>
 
 <pre><code class="bash">
@@ -121,7 +121,7 @@ origin  git@github.com:YourGithubUsername/ideator.git (push)
 </code></pre>
 
 <p>
-  If nothing is outputted, then chances are you missed a step. Try following every step carefully and make sure not to make typos.
+  If nothing is outputted, then chances are that you missed a step. Try following every step carefully and make sure not to make typos.
 </p>
 
 <p>
@@ -131,7 +131,7 @@ origin  git@github.com:YourGithubUsername/ideator.git (push)
 <h3>Setting Up Heroku</h3>
 
 <p>
-  Heroku is a service that let's you deploy your application live extremely easily. Professional teams use Heroku because of how easy it is to use it. It allows you to push your code live in no time!
+  Heroku is a service that lets you deploy your application live extremely easily. Professional teams use Heroku because of how easy it is to use it. It allows you to push your code live in no time!
 </p>
 
 <p>
