--- a/app/views/ideator_lessons/lessons/lesson_3.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_3.html.erb
@@ -27,7 +27,7 @@
 <h3>Model</h3>
 
 <p>
-  The model is responsible for interacting with the database. It is responsible for things like fetching new information and storing information into the database. Every Rails application has a <code>app/models</code> directory, which holds all of the model files.
+  The model is responsible for interacting with the database. It is responsible for things like fetching new information and storing information into the database. Every Rails application has an <code>app/models</code> directory, which holds all of the model files.
 </p>
 
 <h3>Views</h3>
@@ -39,7 +39,7 @@
 <h3>Controller</h3>
 
 <p>
-  The controller is responsible for interacting with both the views and the model. It is the middleman between the two. Every Rails application has a <code>app/controllers</code> directory, which holds all of the controller files.
+  The controller is responsible for interacting with both the views and the model. It is the middleman between the two. Every Rails application has an <code>app/controllers</code> directory, which holds all of the controller files.
 </p>
 
 <p>
