--- a/app/views/ideator_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_4.html.erb
@@ -13,7 +13,7 @@ rails generate controller ideas
 </code></pre>
 
 <p>
-	This command generates a <code>controller</code> called <code>ideas</code> for you and will also generate a lot of files. Don’t worry too much about what this piece of code does yet. Things will start coming together as we progress, but for now we want you to start building an app first. This will keep you motivated from the start and help you overcome the first initial wall.
+	This command generates a <code>controller</code> called <code>ideas</code> for you and will also generate a lot of files. Don’t worry too much about what this piece of code does yet. Things will start coming together as we progress, but for now, we want you to start building an app first. This will keep you motivated from the start and help you overcome the first initial wall.
 </p>
 
 <p>
