--- a/app/views/ideator_lessons/lessons/lesson_6.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_6.html.erb
@@ -1,11 +1,11 @@
 
 
 <p>
-	This is going to be your first self directed lesson. <strong>The purpose of these lessons is so that you actually start learning how to implement things on your own based on what you’ve learned throughout these lessons.</strong>
+	This is going to be your first self-directed lesson. <strong>The purpose of these lessons is so that you actually start learning how to implement things on your own based on what you’ve learned throughout these lessons.</strong>
 </p>
 
 <p>
-	In this self directed lesson, <strong>the goal is to implement a navbar using bootstrap</strong> according to our wireframe that we drew up before.
+	In this self-directed lesson, <strong>the goal is to implement a navbar using bootstrap</strong> according to our wireframe that we drew up before.
 </p>
 
 <p>
@@ -15,7 +15,7 @@
 <%= image_tag 'ideator/navbar.png', class: 'img-responsive screenshot' %>
 
 <p>
-  Don't worry about actually implementing the links, just leave the URLs as blank (<code>&lt;a&gt; href = "" &lt;/a&gt;</code>). Also don't worry about the styling since we'll get to that in the next lesson. Just focus on implementing the bootstrap navbar into your web app for now.
+  Don't worry about actually implementing the links, just leave the URLs as blank (<code>&lt;a&gt; href = "" &lt;/a&gt;</code>). Also, don't worry about the styling since we'll get to that in the next lesson. Just focus on implementing the bootstrap navbar into your web app for now.
 </p>
 
 <div class="well">
