--- a/app/views/ideator_lessons/lessons/lesson_7.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_7.html.erb
@@ -82,7 +82,7 @@
   <h3>What is SCSS?</h3>
 
   <p>
-    SCSS files are CSS files that enables developers to write CSS in a more elegant way. SCSS stands for <strong>Sassy CSS</strong>. Rails uses SCSS by default. You can use the normal CSS syntax in these SCSS files as you would with CSS files.
+    SCSS files are CSS files that enable developers to write CSS in a more elegant way. SCSS stands for <strong>Sassy CSS</strong>. Rails uses SCSS by default. You can use the normal CSS syntax in these SCSS files as you would with CSS files.
   </p>
 
   <p>
