--- a/app/views/ideator_lessons/lessons/lesson_15.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_15.html.erb
@@ -15,7 +15,7 @@
 </p>
 
 <p>
-  For now, let's write a validatation to make sure that the <code>description</code> and <code>author</code> exists for every <code>Idea</code>.
+  For now, let's write a validation to make sure that the <code>description</code> and <code>author</code> exists for every <code>Idea</code>.
 </p>
 
 <p>
