--- a/app/views/ideator_lessons/lessons/lesson_17.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_17.html.erb
@@ -69,7 +69,7 @@ edit_idea GET    /ideas/:id/edit(.:format) ideas#edit
 </p>
 
 <p class="alert alert-success">
-View this <%=link_to 'this lesson', '/ideator_lessons/12' %> to review what <code>resources</code> do in the <code>routes.rb</code> file.
+View <%=link_to 'this lesson', '/ideator_lessons/12' %> to review what <code>resources</code> do in the <code>routes.rb</code> file.
 </p>
 
 <p>
