--- a/app/views/ideator_lessons/lessons/lesson_18.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_18.html.erb
@@ -11,7 +11,7 @@
 <pre><code class="erb">
 &lt;h1&gt;About&lt;/h1&gt;
 
-&lt;h4&gt;Share you ideas with the world and find others.&lt;/h4&gt;
+&lt;h4&gt;Share your ideas with the world and find others.&lt;/h4&gt;
 
 &lt;p&gt;
   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
