--- a/app/views/ideator_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_19.html.erb
@@ -150,7 +150,7 @@ end
 </div>
 
 <p>
-  Sweet, you've now added all of the pages succesfully! The final step in this lesson is to add a link to the random page in the navbar.
+  Sweet, you've now added all of the pages successfully! The final step in this lesson is to add a link to the random page in the navbar.
 </p>
 
 <p>
