--- a/app/views/ideator_lessons/lessons/lesson_23.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_23.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 <p>
-  Congratulations! You've completed your first Ruby on Rails application! You've successfully created an app from scratch and you kind of understand how these apps are built now.
+  Congratulations! You've completed your first Ruby on Rails application! You've successfully created an app from scratch and you are now starting to understand how these apps are built.
 </p>
 
 <p>
