--- a/app/views/ideator_lessons/lessons/lesson_22.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_22.html.erb
@@ -32,7 +32,7 @@
 </p>
 
 <p>
-  The rest of this lesson is going to be a <strong>self guided lesson</strong>. Make the app look exactly how you want it!
+  The rest of this lesson is going to be a <strong>self-guided lesson</strong>. Make the app look exactly how you want it!
 </p>
 
 <p>
