--- a/app/views/ideator_lessons/lessons/lesson_19.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_19.html.erb
@@ -52,7 +52,7 @@ end
 </p>
 
 <p>
-  If we go to <code>http://localhost:3000/random</code>, we see an idea and every time we refresh the page, a new idea comes up. Awesome!
+  If we go to <code>/random</code>, we see an idea and every time we refresh the page, a new idea comes up. Awesome!
 </p>
 
 <p>
