--- a/app/views/ideator_lessons/lessons/lesson_5.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_5.html.erb
@@ -162,7 +162,7 @@ mv app/assets/stylesheets/application.css app/assets/stylesheets/application.scs
 
 <p>Awesome. You should now be set.</p>
 
-<p>Refresh <code>localhost:3000</code> and your font should have changed into a different font. That means your bootstrap has been installed! Great job!</p>
+<p>Refresh your page and your font should have changed into a different font. That means your bootstrap has been installed! Great job!</p>
 
 <div class="well">
   <h3>Not working?</h3>
