--- a/app/views/ideator_lessons/lessons/lesson_18.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_18.html.erb
@@ -76,7 +76,7 @@
 </code></pre>
 
 <p>
-  Let's try this out. If you go to <code>http://localhost:3000/about</code>, you should see your about page. Awesome!
+  Let's try this out. If you go to <code>/about</code>, you should see your about page. Awesome!
 </p>
 
 <p>
