change rake db:create:all

--- a/app/views/ideator_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_1.html.erb
@@ -161,7 +161,7 @@ rake db:create
 	<h3>rake db:create</h3>
 
 	<p>
-		We run the <code>rake db:create:all</code> command to create a new database. This command creates a new database according to the information in the <code>database.yml</code> file.
+		We run the <code>rake db:create</code> command to create a new database. This command creates a new database according to the information in the <code>database.yml</code> file.
 	</p>
 
 	<h3>database.yml</h3>
