--- a/app/views/instapost_lessons/lessons/lesson_23.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_23.html.erb
@@ -103,7 +103,7 @@ class CommentsController &lt; ApplicationController
 </code></pre>
 
 <p>
-  Awesome! Now that we've set up the logic for creating posts, let's not forget to add validations to our posts.
+  Awesome! Now that we've set up the logic for creating comments, let's not forget to add validations to our comments.
 </p>
 
 <h3>Adding Validations</h3>
