--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -6,40 +6,12 @@
 
   <%= render "shared/flash_messages" %>
 
-  <div class="row">
-    <div class="col-xs-12 col-sm-2">
-      <%= image_tag @user.avatar, class: 'prof_pic_forum' %>
-      <div class="prof_name">
-        <%= @user.name %>
-      </div>
-      <div class="prof_badge">
-        <% if @user.mentor %>
-          <label class="label label-default">TECHRISE Mentor</label>
-        <% end %>
-      </div>
-      <div class="edit_post_links">
-        <% if current_user == @question.user || current_user.admin %>
-          <%= link_to '<i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit'.html_safe, edit_question_path(@question.id), class: 'btn btn-sm btn-warning'  %>
-          <%= link_to '<i class="fa fa-trash" aria-hidden="true"></i> Delete'.html_safe, question_path(@question.id), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-warning' %>
-        <% end %>
-      </div>
-    </div>
+  <%= react_component 'Question', { question: @question, 
+                                    user: @question.user, 
+                                    user_img_src: image_url(@user.avatar),
+                                    display_post_links: current_user == @question.user || current_user.admin } %>
 
-    <div class="col-xs-12 col-sm-10">
-      <h3><%= @question.title %></h3>
-      <small><%= display_date(@question.created_at) %></small>
-      <br>
-      <%= sanitize raw(@question.content) %>
-      <p class = "pull-right" ></p>
-      <br class = "clear">
-
-      <% if current_user.admin || @question.user == current_user %>
-        <div id="question_solved_form_container">
-          <%= render partial: 'question_solved_form' %>
-        </div>
-      <% end %>
-    </div>
-  </div>
+  
 
   <hr>
 
