--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -1,3 +1,16 @@
+<!--
+  this CSS is necessary for proper padding for syntax highlighting.
+  The syntax highlighting format for the lesson files are slightly differently
+  because of indentation etc. 
+  In short, don't remove this unless necessary 
+-->
+<style type="text/css">
+.hljs {
+  padding: 20px !important;
+}
+</style>
+<!-- end -->
+
 <%= back_to_lesson %>
 
 <div class="devise_box forum_container">
