--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,22 @@
+.forum-forms {
+  .btn-group {
+    position: relative;
+    float: right;
+    margin-top: 20px;
+  }
+
+  .submit-btn {
+    position: relative;
+    float: right;
+    margin-top: 20px;
+  }
+}
+
+textarea {
+  font-family: 'Lato', sans-serif;
+  font-size: 16px !important;
+}
+
 .devise-shared {
   text-align: left;
   margin-top: 50px;
