--- a/app/views/ruby_lessons/lessons/lesson_16.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_16.html.erb
@@ -216,7 +216,7 @@ puts "Age: " + cat.age
 </p>
 
 <p>
-	<strong><code>attr_reader</code> replaces the setter methods</strong>:
+	<strong><code>attr_reader</code> replaces the getter methods</strong>:
 </p>
 
 <pre><code class="ruby">
@@ -249,7 +249,7 @@ end
 </code></pre>
 
 <p>
-	<strong><code>attr_writer</code> replaces the getter methods:</strong>
+	<strong><code>attr_writer</code> replaces the setter methods:</strong>
 </p>
 
 <pre><code class="ruby">
