complete preview feature

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,9 @@
+#preview {
+  background: whitesmoke;
+  padding: 20px;
+  min-height: 200px;
+}
+
 .forum-forms {
   .btn-group {
     position: relative;
