--- a/app/views/questions/_for_lesson.html.erb
+++ b/app/views/questions/_for_lesson.html.erb
@@ -104,18 +104,9 @@
 
   <br>
 
-  <%= react_component 'QuestionForm', { authenticity_token: form_authenticity_token } %>
-
-  <%= simple_form_for :question, url: questions_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
-    <%= f.input :title, required: true %>
-    <%= f.input :content, as: :text, input_html: {rows: 10}, placeholder: 'Type your question in Markdown', required: true %>
-    <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:id]} %>
-    <%= f.input :course_name, as: :hidden, input_html: { value: controller_name.classify} %>
-
-    <br>
-    <%= f.submit 'Submit Question', class: 'btn btn-cta-primary btn-block' %>
-  <% end %>
-
+  <%= react_component 'QuestionForm', { authenticity_token: form_authenticity_token,
+                                        lesson_id: params[:id],
+                                        course_name: controller_name.classify } %>
 
 
 </div>
