--- a/app/views/lessons/_lesson_nav_section.html.erb
+++ b/app/views/lessons/_lesson_nav_section.html.erb
@@ -11,15 +11,7 @@
       (P.S Give it an awesome title name just for fun :D )
     </p>
 
-    <%= simple_form_for :submission, url: submissions_path, method: :post, input_html: {class: 'form-horizontal'} do |f| %>
-      <%= f.input :title, required: true %>
-      <div data-no-turbolink="true">
-        <%= f.input :content, as: :summernote, input_html: {rows: 6}, required: true %>
-      </div>
-      <%= f.input :lesson_id, as: :hidden, input_html: { value: params[:id]} %>
-      <%= f.input :course_name, as: :hidden, input_html: { value: controller_name.classify} %>
-      <%= f.submit 'Submit', class: 'btn btn-cta-primary btn-block' %>
-    <% end %>
+    <%= react_component 'SubmissionForm', { lesson_id: params[:id], course_name: controller_name.classify } %>
 
   </div>
 <% end %>
