--- a/app/views/lessons/show.html.erb
+++ b/app/views/lessons/show.html.erb
@@ -25,7 +25,9 @@
 
       <h1><%= title_for(controller_name.classify.constantize, params[:id].to_i) %></h1>
 
-      <%= render file: "app/views/#{@current_course_link}/lessons/lesson_#{@current_lesson_id}" %>
+      <div id="lesson_text">
+        <%= render file: "app/views/#{@current_course_link}/lessons/lesson_#{@current_lesson_id}" %>
+      </div>
       
       <br class = "clear">
 
