--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -477,8 +477,10 @@ footer {
   text-align: center;
 }
 
-.hljs {
-  padding: 0px 20px 20px !important;
+#lesson_text {
+  .hljs {
+    padding: 0px 20px 20px !important;
+  }
 }
 
 pre {
